--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ asgiref==3.8.1
 beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
-Django==4.2.7
+Django==4.1.13
 djongo==1.3.6
 frozendict==2.4.1
 html5lib==1.1
@@ -20,7 +20,7 @@ pytz==2024.1
 requests==2.31.0
 six==1.16.0
 soupsieve==2.5
-
+sqlparse==0.2.4
 tenacity==8.2.3
 tzdata==2024.1
 urllib3==2.2.1
