--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==4.1.13
-pymysql
+mysqlclient==2.2.4
 frozendict==2.4.1
 html5lib==1.1
 idna==3.6
