--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ lxml==5.2.1
 multitasking==0.0.11
 python-dotenv==1.0.1
 packaging==24.0
-
+mysql-connector==2.2.9
 peewee==3.17.1
 plotly==5.20.0
 python-dateutil==2.9.0.post0
