--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ beautifulsoup4==4.12.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==4.1.13
-mysqlclient==2.2.4
+pymysql==1.1.0
 frozendict==2.4.1
 html5lib==1.1
 idna==3.6
@@ -12,7 +12,7 @@ lxml==5.2.1
 multitasking==0.0.11
 python-dotenv==1.0.1
 packaging==24.0
-mysql-connector==2.2.9
+
 peewee==3.17.1
 plotly==5.20.0
 python-dateutil==2.9.0.post0
